[package]
name = "another-html-builder"
description = """Yet another html builder, focused on being a helper for creating elements, escaping attributes,
escaping text, but not caring if the html structure is valid. It's up to the developer to test that."""
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
repository = "https://github.com/jdrouet/another-html-builder"
keywords = ["html", "builder"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "readme.md"

[dependencies]
